@@ -20,7 +20,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- *  $Id: m_pass.c,v 1.1 1999/07/25 05:32:58 tomh Exp $
+ *  $Id: m_pass.c,v 1.2 1999/07/28 07:49:36 tomh Exp $
  */
 #include "m_commands.h"  /* m_pass prototype */
 #include "client.h"      /* client struct */
@@ -122,7 +122,7 @@ int m_pass(struct Client *cptr, struct Client *sptr, int parc, char *parv[])
        * safely assume if there is a ":TS" then its a TS server
        * -Dianora
        */
-      if (0 == irccmp(parv[2], "TS"))
+      if ((0 == irccmp(parv[2], "TS") && (cptr->tsinfo == 0))
         cptr->tsinfo = TS_DOESTS;
     }
   return 0;
