@@ -1,3 +1,8 @@
+*** 20010603_5 by db
+- backported A1kmm's patch to fix tsinfo
+
+
+
 *** 20010603_4 by greg
 Silly stupid annoying lame bug.
 
